--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,10 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+//    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
     //for drawing the splash screen
     compile 'com.mikhaellopez:circularfillableloaders:1.2.0'
     //rounded Image
@@ -79,6 +82,9 @@ dependencies {
 
     //LoadingButton
     compile 'br.com.simplepass:loading-button-android:1.8.0'
+
+    //for auto mapping
+    compile 'org.modelmapper:modelmapper:1.1.0'
 
 }
 
