--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.activities.splash.SplashActivity_"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            >
+        <activity
+            android:name=".presentation.activities.splash.SplashActivity_"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.activities.login.LoginActivity_"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            />
-        <activity android:name=".presentation.activities.main.MainActivity_"></activity>
+        <activity
+            android:name=".presentation.activities.login.LoginActivity_"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".presentation.activities.main.MainActivity_" />
+        <activity android:name=".presentation.activities.inscription.InscriptionActivity"></activity>
     </application>
 
 </manifest>
