--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,21 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".commun.customapplication.CustomApplication">
         <activity
             android:name=".presentation.activities.splash.SplashActivity_"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -27,7 +30,10 @@
             android:name=".presentation.activities.login.LoginActivity_"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".presentation.activities.main.MainActivity_" />
-        <activity android:name=".presentation.activities.inscription.InscriptionActivity"></activity>
+        <activity android:name=".presentation.activities.inscription.InscriptionActivity_"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            ></activity>
+
     </application>
 
 </manifest>
