--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.application'
-//devrai etre ignored
+
 android {
-    compileSdkVersion 25
+    compileSdkVersion 23
     buildToolsVersion "26.0.1"
+
     defaultConfig {
         applicationId "mg.etech.mobile.etechapp"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -37,9 +37,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25..01'
+    compile 'com.android.support:appcompat-v7:23.0.0'
 
-    compile 'com.android.support:design:25+'
+    compile 'com.android.support:design:23+'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
@@ -97,9 +97,6 @@ dependencies {
     //for debugging request
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-
-    //FLIPVIEW
-    compile 'eu.davidea:flipview:1.1.3'
 }
 
 apply plugin: 'android-apt'
@@ -111,8 +108,8 @@ dependencies {
 
 }
 dependencies {
-    compile 'com.android.support:support-v4:25.+'
+    compile 'com.android.support:support-v4:23.+'
 }
 dependencies {
-    compile 'com.android.support:support-v4:25.+'
+    compile 'com.android.support:support-v4:23.+'
 }
