--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+//    androidTestCompile 'com.android.support.test:runner:0.5'
+//    androidTestCompile 'com.android.support.test:rules:0.5'
     compile 'com.android.support:appcompat-v7:23.0.0'
 
     compile 'com.android.support:design:23+'
@@ -110,9 +112,6 @@ dependencies {
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
 
-}
-dependencies {
-    compile 'com.android.support:support-v4:23.+'
 }
 dependencies {
     compile 'com.android.support:support-v4:23.+'
