--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,24 +8,26 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
-
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".commun.customapplication.CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".commun.customapplication.CustomApplication">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".presentation.activities.splash.SplashActivity_"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -33,10 +35,9 @@
             android:name=".presentation.activities.login.LoginActivity_"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".presentation.activities.main.MainActivity_" />
-        <activity android:name=".presentation.activities.inscription.InscriptionActivity_"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            ></activity>
-
+        <activity
+            android:name=".presentation.activities.inscription.InscriptionActivity_"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -45,9 +46,12 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
 
+        <activity
+            android:name=".presentation.activities.detailemploye.DetailEmployeActivity_"
+            android:label="@string/detail_employe_label"></activity>
     </application>
 
 </manifest>
