--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 23
     buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "mg.etech.mobile.etechapp"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
 //        multiDexEnabled true
@@ -41,10 +41,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
 //    androidTestCompile 'com.android.support.test:runner:0.5'
 //    androidTestCompile 'com.android.support.test:rules:0.5'
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:23.+'
 
-    compile 'com.android.support:design:25+'
-    compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.android.support:design:23+'
+    //compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 //    compile 'com.google.code.gson:gson:2.3'
@@ -92,7 +92,7 @@ dependencies {
     compile 'org.modelmapper:modelmapper:1.1.0'
 
     //image cropper
-    //compatible ave sdk 25
+    //compatible ave sdk 23
     compile 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
 
     //for activity register a la Rx
@@ -117,16 +117,19 @@ dependencies {
 
     compile 'com.squareup.picasso:picasso:2.5.2'
 
-    //for constraint layout
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
     //circle image view
     compile 'de.hdodenhof:circleimageview:2.1.0'
 
     //rebound
     compile 'com.facebook.rebound:rebound:0.3.8'
-}
 
+    //floating button
+    compile 'com.github.clans:fab:1.6.4'
+
+    //date picker
+    compile 'com.github.flavienlaurent.datetimepicker:library:0.0.2'
+
+}
 
 def AAVersion = '4.3.1'
 
@@ -139,7 +142,7 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.9'
 }
 dependencies {
-    compile 'com.android.support:support-v4:25.+'
-    compile 'com.android.support:cardview-v7:25.+'
+    compile 'com.android.support:support-v4:23.+'
+    compile 'com.android.support:cardview-v7:23.+'
 }
 
