--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 23
     buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "mg.etech.mobile.etechapp"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
 //        multiDexEnabled true
@@ -41,9 +41,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
 //    androidTestCompile 'com.android.support.test:runner:0.5'
 //    androidTestCompile 'com.android.support.test:rules:0.5'
-    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support:appcompat-v7:23.+'
 
-    compile 'com.android.support:design:25+'
+    compile 'com.android.support:design:23+'
     //compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
@@ -92,7 +92,7 @@ dependencies {
     compile 'org.modelmapper:modelmapper:1.1.0'
 
     //image cropper
-    //compatible ave sdk 25
+    //compatible ave sdk 23
     compile 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
 
     //for activity register a la Rx
@@ -135,9 +135,8 @@ dependencies {
     //chipcloud
     compile 'com.github.maheryhaja:ChipCloud:3.0.6'
 
-    //for beautiful dialog
-    compile 'com.github.maheryhaja:LovelyDialog:1.0.8'
-
+    // android flexbox
+    compile 'com.google.android:flexbox:0.3.0'
 
 }
 
@@ -148,11 +147,9 @@ dependencies {
     compile "org.androidannotations:androidannotations-api:$AAVersion"
 
     //parceler
-    compile 'org.parceler:parceler-api:1.1.9'
-    annotationProcessor 'org.parceler:parceler:1.1.9'
 }
 dependencies {
-    compile 'com.android.support:support-v4:25.+'
-    compile 'com.android.support:cardview-v7:25.+'
+//    compile 'com.android.support:support-v4:23.+'
+    compile 'com.android.support:cardview-v7:23.+'
 }
 
