--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 apply plugin: 'com.android.application'
 
 android {
@@ -93,7 +94,7 @@ dependencies {
 
     //image cropper
     //compatible ave sdk 23
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
+//    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
 
     //for activity register a la Rx
     compile 'com.github.VictorAlbertos:RxActivityResult:0.4.5-2.x'
