--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-//        multiDexEnabled true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -69,7 +69,7 @@ dependencies {
 //    compile 'commons-codec:commons-codec:1.8'
 //    compile 'commons-lang:commons-lang:2.6'
 //    compile 'org.apache.httpcomponents:httpcore:4.3.2'
-//    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:multidex:1.0.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.2'
     compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
