--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,16 @@
-
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 23
     buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "mg.etech.mobile.etechapp"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
+//        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -42,9 +41,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
 //    androidTestCompile 'com.android.support.test:runner:0.5'
 //    androidTestCompile 'com.android.support.test:rules:0.5'
-    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support:appcompat-v7:23.+'
 
-    compile 'com.android.support:design:25+'
+    compile 'com.android.support:design:23+'
     //compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
@@ -69,7 +68,7 @@ dependencies {
 //    compile 'commons-codec:commons-codec:1.8'
 //    compile 'commons-lang:commons-lang:2.6'
 //    compile 'org.apache.httpcomponents:httpcore:4.3.2'
-    compile 'com.android.support:multidex:1.0.0'
+//    compile 'com.android.support:multidex:1.0.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.2'
     compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
@@ -93,7 +92,7 @@ dependencies {
     compile 'org.modelmapper:modelmapper:1.1.0'
 
     //image cropper
-    //compatible ave sdk 25
+    //compatible ave sdk 23
 //    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
 
     //for activity register a la Rx
@@ -150,7 +149,7 @@ dependencies {
     //parceler
 }
 dependencies {
-//    compile 'com.android.support:support-v4:25.+'
-    compile 'com.android.support:cardview-v7:25.+'
+//    compile 'com.android.support:support-v4:23.+'
+    compile 'com.android.support:cardview-v7:23.+'
 }
 
