--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
             android:name=".presentation.activities.employe.detailemploye.DetailEmployeActivity_"
             android:label="@string/detail_employe_label" />
         <activity android:name=".presentation.activities.employe.createEmloye.CreateEmployeActivity_" />
-        <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeActivity_"></activity>
+        <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeActivity_" />
+        <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeTempActivity_"></activity>
     </application>
 
 </manifest>
