--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
 //    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    // compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
     //for drawing the splash screen
     compile 'com.mikhaellopez:circularfillableloaders:1.2.0'
