--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 23
     buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "mg.etech.mobile.etechapp"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
 //        multiDexEnabled true
@@ -41,10 +41,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
 //    androidTestCompile 'com.android.support.test:runner:0.5'
 //    androidTestCompile 'com.android.support.test:rules:0.5'
-    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support:appcompat-v7:23.+'
 
 
-    compile 'com.android.support:design:25+'
+    compile 'com.android.support:design:23+'
     //compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
@@ -83,7 +83,7 @@ dependencies {
     //for drawing the splash screen
     compile 'com.mikhaellopez:circularfillableloaders:1.2.0'
     //rounded Image
-    compile 'com.makeramen:roundedimageview:2.3.0'
+    //compile 'com.makeramen:roundedimageview:2.3.0'
     //diagonal Layout
     compile 'com.github.florent37:diagonallayout:1.0.7'
 
@@ -94,7 +94,7 @@ dependencies {
     compile 'org.modelmapper:modelmapper:1.1.0'
 
     //image cropper
-    //compatible ave sdk 25
+    //compatible ave sdk 23
 //    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
 
     //for activity register a la Rx
@@ -151,7 +151,7 @@ dependencies {
     //parceler
 }
 dependencies {
-//    compile 'com.android.support:support-v4:25.+'
-    compile 'com.android.support:cardview-v7:25.+'
+//    compile 'com.android.support:support-v4:23.+'
+    compile 'com.android.support:cardview-v7:23.+'
 }
 
