--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,7 +138,11 @@ dependencies {
     compile 'com.github.maheryhaja:ChipCloud:3.0.6'
 
     // android flexbox
-    compile 'com.google.android:flexbox:0.3.0'
+    compile 'com.google.android:flexbox:0.2.7'
+
+
+    compile 'com.wrapp.floatlabelededittext:library:0.0.6'
+
 
 }
 
