--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,8 @@
             android:label="@string/detail_employe_label" />
         <activity android:name=".presentation.activities.employe.createEmloye.CreateEmployeActivity_" />
         <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeActivity_" />
-        <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeTempActivity_"></activity>
+        <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeTempActivity_" />
+        <activity android:name=".presentation.activities.test.TestAnimationActivity_"></activity>
     </application>
 
 </manifest>
