better look, synchro working perfectly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,10 +54,28 @@
 
         <activity
             android:name=".presentation.activities.employe.detailemploye.DetailEmployeActivity_"
-            android:label="@string/detail_employe_label" />
-        <activity android:name=".presentation.activities.employe.createEmloye.CreateEmployeActivity_" />
-        <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeActivity_" />
-        <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeTempActivity_" />
+            android:label="@string/detail_employe_label">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".presentation.activities.main.MainActivity_" />
+        </activity>
+        <activity android:name=".presentation.activities.employe.createEmloye.CreateEmployeActivity_">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".presentation.activities.main.MainActivity_" />
+        </activity>
+
+        <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeActivity_">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".presentation.activities.main.MainActivity_" />
+        </activity>
+        <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeTempActivity_">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".presentation.activities.main.MainActivity_" />
+        </activity>
         <activity android:name=".presentation.activities.test.TestAnimationActivity_"></activity>
     </application>
 
