--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,18 @@
 apply plugin: 'com.android.application'
 
+buildscript {
+    repositories {
+        mavenCentral() // or jcenter()
+    }
+
+    dependencies {
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.1'
+    }
+}
+
+// make sure this line comes *after* you apply the Android plugin
+apply plugin: 'com.getkeepsafe.dexcount'
+
 android {
     compileSdkVersion 23
     buildToolsVersion "26.0.1"
@@ -15,6 +28,10 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -41,10 +58,15 @@ dependencies {
     testCompile 'junit:junit:4.12'
 //    androidTestCompile 'com.android.support.test:runner:0.5'
 //    androidTestCompile 'com.android.support.test:rules:0.5'
-    compile 'com.android.support:appcompat-v7:23.+'
+    compile('com.android.support:appcompat-v7:23.+') {
+        exclude module: 'support-v4'
+    }
 
 
-    compile 'com.android.support:design:23+'
+    compile('com.android.support:design:23+') {
+        exclude module: 'support-v4'
+    }
+
     //compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
@@ -72,8 +94,14 @@ dependencies {
 
 //    compile 'com.android.support:multidex:1.0.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.2'
-    compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+
+
+
+    compile('com.squareup.retrofit2:converter-jackson:2.3.0') {
+        exclude module: 'com.fasterxml.jackson.databind.ser'
+
+    }
 //    compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
 //    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
@@ -123,7 +151,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
 
     //rebound
-    compile 'com.facebook.rebound:rebound:0.3.8'
+    compile 'com.facebook.rebound:rebound:0.3.3'
 
     //floating button
     compile 'com.github.clans:fab:1.6.4'
@@ -149,6 +177,10 @@ dependencies {
     // check the internet connexion
     compile 'com.github.pwittchen:reactivenetwork-rx2:0.12.1'
 
+    //android lifecycle
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.0'
+//    compile 'com.trello.rxlifecycle2:rxlifecycle-navi:2.2.0'
+
 }
 
 def AAVersion = '4.3.1'
@@ -161,6 +193,12 @@ dependencies {
 }
 dependencies {
 //    compile 'com.android.support:support-v4:23.+'
-    compile 'com.android.support:cardview-v7:23.+'
+
+    compile('com.android.support:cardview-v7:23.+') {
+        exclude module: 'support-v4'
+    }
 }
 
+configurations {
+    all*.exclude group: 'com.android.support', module: 'support-v4'
+}
