--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="false"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".presentation.activities.splash.SplashActivity_"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -61,7 +61,6 @@
         <activity
             android:name=".presentation.activities.employe.detailemploye.DetailEmployeActivity_"
             android:label="@string/detail_employe_label">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".presentation.activities.main.MainActivity_" />
@@ -71,7 +70,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".presentation.activities.main.MainActivity_" />
         </activity>
-
         <activity android:name=".presentation.activities.employe.updateEmploye.UpdateEmployeActivity_">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -82,7 +80,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".presentation.activities.main.MainActivity_" />
         </activity>
-        <activity android:name=".presentation.activities.test.TestAnimationActivity_"></activity>
+        <activity android:name=".presentation.activities.test.TestAnimationActivity_" />
+        <activity android:name=".presentation.activities.error.ErrorActivity_"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            ></activity>
     </application>
 
 </manifest>
