--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,16 +14,16 @@ buildscript {
 apply plugin: 'com.getkeepsafe.dexcount'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "mg.etech.mobile.etechapp"
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-//        multiDexEnabled true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -58,12 +58,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
 //    androidTestCompile 'com.android.support.test:runner:0.5'
 //    androidTestCompile 'com.android.support.test:rules:0.5'
-    compile('com.android.support:appcompat-v7:23.+') {
+    compile('com.android.support:appcompat-v7:25.+') {
         exclude module: 'support-v4'
     }
 
 
-    compile('com.android.support:design:23+') {
+    compile('com.android.support:design:25+') {
         exclude module: 'support-v4'
     }
 
@@ -92,7 +92,7 @@ dependencies {
 //    compile 'commons-lang:commons-lang:2.6'
 //    compile 'org.apache.httpcomponents:httpcore:4.3.2'
 
-//    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:multidex:1.0.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
 
@@ -122,7 +122,7 @@ dependencies {
     compile 'org.modelmapper:modelmapper:1.1.0'
 
     //image cropper
-    //compatible ave sdk 23
+    //compatible ave sdk 25
 //    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
 
     //for activity register a la Rx
@@ -192,9 +192,9 @@ dependencies {
     //parceler
 }
 dependencies {
-//    compile 'com.android.support:support-v4:23.+'
+//    compile 'com.android.support:support-v4:25.+'
 
-    compile('com.android.support:cardview-v7:23.+') {
+    compile('com.android.support:cardview-v7:25.+') {
         exclude module: 'support-v4'
     }
 }
